2009-06-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40495
	* tree-ssa-structalias.c (get_constraint_exp_for_temp): Remove.
	(new_scalar_tmp_constraint_exp): New function.
	(process_constraint): Do not create temporary decls.
	(process_all_all_constraints): Likewise.
	(handle_const_call): Likewise.
	(create_function_info_for): Do not set decl.

2009-06-19  Ian Lance Taylor  <iant@google.com>

	* config/rs6000/rs6000.c (rs6000_explicit_options): Make static.
	(rs6000_attribute_table): Make static; move before use.

2009-06-19  Eric Botcazou  <ebotcazou@adacore.com>

	* tree.c (substitute_in_expr) <COMPONENT_REF>: Tweak and reformat.
	<tcc_vl_exp>: Call process_call_operands on the new CALL_EXPR.
	Propagate the TREE_READONLY flag without overwriting it.
	(substitute_placeholder_in_expr) <tcc_vl_exp>: Likewise.
	Propagate the TREE_READONLY flag onto the result.
	(process_call_operands): Move around.  Use correct constant value.

2009-06-19  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/40482
	* config/arm/arm.c (thumb_shiftable_const): Truncate val to 
	32 bits.
	* config/arm/arm.md: Likewise.

2009-06-19  Ian Lance Taylor  <ian@airs.com>

	* tree-cfg.c (gimple_redirect_edge_and_branch): Change ERROR_MARK
	to GIMPLE_ERROR_MARK.

	* c-typeck.c (build_conditional_expr): Add op1_original_type and
	op2_original_type parameters.  Warn about using different enum
	types.
	* c-parser.c (c_parser_conditional_expression): Pass original
	types to build_conditional_expr.
	* c-tree.h (build_conditional_expr): Update declaration.

2009-06-19  Ian Lance Taylor  <iant@google.com>

	* config/i386/i386.c (ix86_function_specific_save): Test that
	fields match values, rather than testing the values are in a
	certain range.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-alias.c (ptr_deref_may_alias_decl_p): Handle
	ADDR_EXPR pointers.
	(ptr_derefs_may_alias_p): Likewise.
	(ptr_deref_may_alias_ref_p_1): New function.