@@ -1,5 +1,14 @@
 2009-06-20  Richard Guenther  <rguenther@suse.de>
 
+	* tree-ssa-structalias.c (find_func_aliases): For memset use
+	a constraint from NULL if we memset to zero.
+	* tree-ssa-alias.c (ref_maybe_used_by_call_p_1): Add builtins
+	we explicitly handle that do not read from memory.
+	(call_may_clobber_ref_p_1): Properly handle builtins that may
+	set errno.
+
+2009-06-20  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/40495
 	* tree-ssa-structalias.c (get_constraint_exp_for_temp): Remove.
 	(new_scalar_tmp_constraint_exp): New function.
